forth/test/fail/test_dot_call_define_leading_num_sign.af
\ Must fail to compile.
fun: +1bad_name { -- err } end
